--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/ring.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/hands.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Merel & Matthew O'Brien - Wedding website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
